kanc_pamoi/src/tests/sample_code/should_fail/single_file/illegal_recursion/rec_fun_same_param.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let x = fun x(-a: Nat): Nat {
    x(a)
};
